--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
   min-height: 100vh;
   font-family: "Space Mono", monospace;
   padding-bottom: 5rem;
+  position: relative;
 }
 
 nav {
@@ -124,5 +125,24 @@ nav p {
     padding: 0;
     max-width: 26ch;
   }
+}
+
+footer {
+  width: 100%;
+  min-height: 3vh;
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+footer p {
+  font-size: 0.875rem;
+  color: #4f4f4f;
 }
 /*# sourceMappingURL=main.css.map */
