--- a/css/layout/_main.scss
+++ b/css/layout/_main.scss
@@ -38,6 +38,7 @@
       font-family: $ffspacemono;
       text-transform: uppercase;
       padding: 1.5rem 3rem;
+      cursor: pointer;
     }
   }
 }
